[package]
name = "themis_oracle_script"
version = "0.1.0"
authors = ["Riccardo Montagnin <riccardo@forbole.com>"]
edition = "2018"

[lib]
path = "src/script.rs"
crate-type = ["cdylib", "rlib"]

[dependencies]
obi = { git = "https://github.com/bandprotocol/bandchain", branch = "master" }
owasm = "0.1.10"
wasm-bindgen = "0.2.82"

[dev-dependencies]
hex = "0.4.3"
base64 = "0.13.0"