[package]
name = "themis_oracle_script"
version = "0.1.0"
authors = ["Riccardo Montagnin <riccardo@forbole.com>"]
edition = "2021"

[lib]
path = "src/script.rs"
crate-type = ["cdylib", "rlib"]

[dependencies]
obi = { version = "0.0.2" }
owasm-kit = { version = "0.3.0" }
wasm-bindgen = "0.2.86"

[dev-dependencies]
hex = "0.4.3"
base64 = "0.21.2"